@@ -1,6 +1,7 @@
 2011-06-15 Jiri Olsa <olsajiri@gmail.com>
 	* global_symbol fix - proper tree management
 	* make tracer return actual tracee status
+	* move all tests to scripts
 
 2011-06-02 Jiri Olsa <olsajiri@gmail.com>
 	* adding large file support
